# thenetworktimes

./: .env_example  .gitignore  Cargo.toml  README.md  index.html  package-lock.json  tailwind.config.js
end2end/tests/: example.spec.ts
migrations/2024-06-06-172023_create_conversations/: down.sql  up.sql
migrations/2024-09-11-074216_active_lab_required/: down.sql  up.sql
migrations/2024-09-17-062714_thread_id_required/: down.sql  up.sql
migrations/2025-05-30-032239_add_title_to_threads/: down.sql  up.sql
src/: app.rs  handlers.rs  lib.rs  main.rs  rogging.rs  schema.rs  state.rs  tmp.txt  wogging.rs
src/components/: cache_provider.rs  cast_entry.rs  cast_list.rs  channels.rs  chat.rs  code_block.rs  dark_mode_toggle.rs  messagelist.rs  mod.rs  navbar.rs  profile.rs  threadlist.rs  toast.rs
src/database/: db.rs
src/models/: conversations.rs  farcaster.rs  mod.rs
src/pages/: codedemo.rs  home.rs  hometest.rs  mermaiddemo.rs  mod.rs  settings.rs  writersroom.rs
src/services/: hubble.rs  mod.rs  redis.rs
style/: main.scss  tailwind.css
